--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ body {
 }
 .logo-studio-header {
   color: var(--logo-header-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-studio-header:hover,
 .logo-studio-header:focus,
@@ -82,12 +83,27 @@ body {
   color: var(--primary-color);
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navi-active:hover,
 .navi-active:focus,
 .navi .navi-stud.current,
 .navi .navi-port-port.current {
   color: var(--accent-color);
+}
+.navi-list > .current::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  display: block;
+  bottom: 0px;
+}
+.navi-stud,
+.navi-port-port {
+  position: relative;
 }
 
 /*.navi .navi-stud.current,
@@ -167,6 +183,16 @@ body {
 .header-icon-smartphone {
   fill: currentColor;
 }
+
+/* transitions for btn-hover*/
+
+.hero-btn,
+.btn-active {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /*main studio section*/
 
 .hero {
@@ -365,6 +391,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-icon-hover {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover,
 .social-link:focus {
@@ -389,6 +419,7 @@ img {
 }
 .social-footer-link {
   background-color: var(--footer-icon-bcgcolor);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-footer-link:hover,
 .social-footer-link:focus {
@@ -426,6 +457,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers-icon-hover {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-icon {
   width: 106px;
@@ -450,6 +485,7 @@ img {
 }
 .logo-studio-footer {
   color: var(--title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-section .logo {
   display: inline-block;
@@ -467,6 +503,7 @@ img {
 }
 .contact-footer {
   color: var(--footer-contact-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-footer:hover,
 .contact-footer:focus {
@@ -568,6 +605,7 @@ img {
 .portfolio-list-link {
   text-decoration: none;
   display: inline-block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-type {
