--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --footer-contact-color: rgba(255, 255, 255, 0.6);
   --header-line-color: #ececec;
   --border-portfolio-card: #eeeeee;
+  --bkground-color-textcard: rgba(33, 150, 243, 0.9);
   --card-set-gap: 30px;
   --box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -636,4 +637,12 @@ img {
 .portfolio-list-link:hover,
 .portfolio-list-link:focus {
   box-shadow: var(--box-shadow-portfolio);
+}
+.card-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--title-color);
+  background-color: var(--bkground-color-textcard);
 }
