--- a/css/styles.css
+++ b/css/styles.css
@@ -638,11 +638,28 @@ img {
 .portfolio-list-link:focus {
   box-shadow: var(--box-shadow-portfolio);
 }
+
+.portfolio-list-link:hover .card-text,
+.portfolio-list-link:focus .card-text {
+  transform: translateY(0);
+}
+.card-text-wrapper {
+  position: relative;
+  overflow: hidden;
+}
 .card-text {
+  position: absolute;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.56;
   color: var(--title-color);
   background-color: var(--bkground-color-textcard);
+  top: 0px;
+  left: 0px;
+  margin: 0;
+  padding: 63px 24px;
+  height: 100%;
 }
