ready for check

--- a/css/styles.css
+++ b/css/styles.css
@@ -352,12 +352,13 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
   text-transform: uppercase;
   color: var(--title-color);
   background-color: rgba(47, 48, 58, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
-  padding: 27 90;
   height: 70px;
   width: 100%;
 }
