--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,8 @@
     0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   --btn-shadow-porfolio: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  --trans-duration: 250ms;
+  --transit-tim-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -65,7 +67,7 @@ body {
 }
 .logo-studio-header {
   color: var(--logo-header-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--trans-duration) var(--transit-tim-function);
 }
 .logo-studio-header:hover,
 .logo-studio-header:focus,
@@ -86,7 +88,7 @@ body {
   color: var(--primary-color);
   padding-top: 32px;
   padding-bottom: 32px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--trans-duration) var(--transit-tim-function);
 }
 .navi-active:hover,
 .navi-active:focus,
@@ -102,7 +104,7 @@ body {
   border-radius: 2px;
   background-color: var(--accent-color);
   display: block;
-  bottom: 0px;
+  bottom: -1px;
 }
 .navi-stud,
 .navi-port-port {
@@ -191,15 +193,17 @@ body {
 
 .hero-btn,
 .btn-active {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--trans-duration) var(--transit-tim-function),
+    background-color var(--trans-duration) var(--transit-tim-function),
+    box-shadow var(--trans-duration) var(--transit-tim-function);
 }
 
 /*main studio section*/
 
 .hero {
   display: flex;
+  align-items: center;
+  justify-content: center;
   height: 600px;
   max-width: 1600px;
   margin: 0 auto;
@@ -213,8 +217,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding-top: 200px;
-  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -406,27 +408,29 @@ img {
   width: 44px;
 }
 .social-link {
+  color: var(--social-icon-color);
   height: 100%;
   width: 100%;
   display: block;
   border-radius: 50%;
-  background-color: var(--title-color);
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--trans-duration) var(--transit-tim-function),
+    color var(--trans-duration) var(--transit-tim-function);
 }
-.social-icon-hover {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+/*.social-icon-hover {
+  transition: fill var(--trans-duration) var(--transit-tim-function);
+}*/
 .social-link:hover,
 .social-link:focus {
+  color: var(--title-color);
   background-color: var(--accent-color);
 }
-.social-link:hover .social-icon-hover,
+/*.social-link:hover .social-icon-hover,
 .social-link:focus .social-icon-hover {
-  fill: var(--title-color);
-}
+  fill: currentColor;
+}*/
 
 .team-social {
   display: flex;
@@ -438,11 +442,11 @@ img {
 .social-icon {
   width: 20px;
   height: 20px;
-  fill: var(--social-icon-color);
+  fill: currentColor;
 }
 .social-footer-link {
   background-color: var(--footer-icon-bcgcolor);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--trans-duration) var(--transit-tim-function);
 }
 .social-footer-link:hover,
 .social-footer-link:focus {
@@ -480,10 +484,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border var(--trans-duration) var(--transit-tim-function);
 }
 .customers-icon-hover {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--trans-duration) var(--transit-tim-function);
 }
 .customers-icon {
   width: 106px;
@@ -508,7 +512,7 @@ img {
 }
 .logo-studio-footer {
   color: var(--title-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--trans-duration) var(--transit-tim-function);
 }
 .footer-section .logo {
   display: inline-block;
@@ -526,7 +530,7 @@ img {
 }
 .contact-footer {
   color: var(--footer-contact-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--trans-duration) var(--transit-tim-function);
 }
 .contact-footer:hover,
 .contact-footer:focus {
@@ -628,7 +632,7 @@ img {
 .portfolio-list-link {
   text-decoration: none;
   display: inline-block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--trans-duration) var(--transit-tim-function);
 }
 
 .portfolio-list-type {
@@ -671,8 +675,8 @@ img {
 }
 .card-text {
   position: absolute;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(101%);
+  transition: transform var(--trans-duration) var(--transit-tim-function);
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -696,8 +700,8 @@ img {
   width: 100vw;
   height: 100vh;
   background-color: var(--bkgpound-color-backdrop);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity var(--trans-duration) var(--transit-tim-function),
+    visibility var(--trans-duration) var(--transit-tim-function);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -713,7 +717,7 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--trans-duration) var(--transit-tim-function);
 }
 
 .backdrop.is-hidden .modal {
